--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
@@ -126,59 +127,53 @@
       <ul>
         <li>
           <a title="html-academy" href="#">
-            <img src="img/html-logo.png" alt="html-academy" width="199" height="68">
+            <img src="img/html-logo.png" alt="html-academy" width="260" height="180">
           </a>
         </li>
         <li>
           <a title="borodinski" href="#">
-            <img src="img/borodinsky-logo-.png" alt="borodinski" width="209" height="90">
+            <img src="img/borodinsky-logo-.png" alt="borodinski" width="260" height="180">
           </a>
         </li>
         <li>
           <a title="pink" href="#">
-            <img src="img/pink-logo.png" alt="pink" width="185" height="52">
+            <img src="img/pink-logo.png" alt="pink" width="260" height="180">
           </a>
         </li>
         <li>
           <a title="mishka" href="#">
-            <img src="img/mishka-logo.png" alt="mishka" width="173" height="84">
+            <img src="img/mishka-logo.png" alt="mishka" width="260" height="180">
           </a>
         </li>
       </ul>
     </div>
   </div>
 
-  <div class="map">
-    <div class="map-wrapper"></div>
-    <div class="container">
-      <section class="map-contacts">
-        <p class="map-conacts-title">NЁRDS DESIGN STUDIO</p>
-        <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
-        <p>тел. +7 (812) 275-75-75</p>
-        <a class="btn" href="#">Напишите нам</a>
-      </section>
-    </div>
-  </div>
-
   <footer>
-    <div class="footer-map">
-      <div class="container clearfix">
-        <a title="карта проезда" href="#">
-          <img src="img/map.png" alt="карта проезда" width="1440" height="416">
-        </a>
 
-        <section class="footer-social">
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+    <div class="map">
+      <div class="map-wrapper ">
+        <section class="map-contacts">
+          <p class="map-conacts-title">NЁRDS DESIGN STUDIO</p>
+          <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <a class="btn" href="#">Напишите нам</a>
         </section>
-        <section class="footer-info">
-          <p class="footer-info-title">Давайте дружить, это выгодно!</p>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
-        </section>
-
       </div>
     </div>
+    <div class="container clearfix">
+      <section class="footer-social">
+        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+      </section>
+      <section class="footer-info">
+        <p class="footer-info-title">Давайте дружить, это выгодно!</p>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </section>
+    </div>
+
+
   </footer>
 
   <!--
