--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         </div>
 
         <div class="slider-item slider-item-math">
-          <h2 class="slider-item-title">Любим математику как никто другой</h2>
-          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+          <h2 class="slider-item-title">Любим математику <br>как никто другой</h2>
+          <p>Никакого креатива, только математические формулы <br>для расчета идеальных пропорций.</p>
           <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
         </div>
 
         <div class="slider-item slider-item-worktime">
-          <h2 class="slider-item-title">Только ночь,только хардкор</h2>
-          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+          <h2 class="slider-item-title">Только ночь,<br>только хардкор</h2>
+          <p>Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
           <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
         </div>
       </div>
@@ -92,7 +92,7 @@
 
     <div class="index-content clearfix">
       <div class="index-content-left">
-        <h3 class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h3>
+        <b class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </b>
         <p>
           Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.
         </p>
@@ -109,15 +109,15 @@
         <p class="index-content-data">с 2004 года любим точность во всем:</p>
         <ul>
           <li>
-            <p class="index-content-data-show">146<sup>%</sup></p>
+            <p class="index-content-data-show">146<span class="sup">%</span></p>
             <p class="index-content-data-description">Уровень самоотдачи</p>
           </li>
           <li>
-            <p class="index-content-data-show">100<sup>%</sup></p>
+            <p class="index-content-data-show">100<span class="sup">%</span></p>
             <p class="index-content-data-description">Соблюдение сроков</p>
           </li>
           <li>
-            <p class="index-content-data-show">50<sup>%</sup></p>
+            <p class="index-content-data-show">50<span class="sup">%</span></p>
             <p class="index-content-data-description">Минимальная предоплата</p>
           </li>
         </ul>
@@ -153,24 +153,24 @@
   <footer>
 
     <div class="map">
-      <div class="container">
+      <div class="container contacts">
         <section class="map-contacts">
-          <p class="map-conacts-title">NЁRDS DESIGN STUDIO</p>
-          <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <a class="btn" href="#">Напишите нам</a>
+          <p class="map-contacts-title">NЁRDS DESIGN STUDIO</p>
+          <p class="map-contacts-address">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
+          <p class="map-contacts-phone">тел. +7 (812) 275-75-75</p>
+          <a class="btn btn-write-us" href="#">Напишите нам</a>
         </section>
       </div>
     </div>
     <div class="container clearfix">
       <section class="footer-social">
         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        <a class="social-btn social-btn-fb" href="#">Facebook</a>
+        <a class="social-btn social-btn-inst" href="#">Instagram</a>
       </section>
       <section class="footer-info">
         <p class="footer-info-title">Давайте дружить, это выгодно!</p>
-        <p>Скидка 10% для друзей из социальных сетей.</p>
+        <p class="footer-info-description">Скидка 10% для друзей из социальных сетей.</p>
       </section>
     </div>
 
