--- a/index.html
+++ b/index.html
@@ -38,12 +38,36 @@
 
     <div class="container">
       <div class="slider">
-        <div class="slider-item slider-item-design">
-          <h2 class="slider-item-title">Долго, дорого, <br>
-            скрупулезно.</h2>
-          <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
-          <a class="btn slider" title="Узнать больше" href="#">Узнать больше</a>
+        <input type="radio" id="btn-1" name="toggle" checked>
+        <input type="radio" id="btn-2" name="toggle">
+        <input type="radio" id="btn-3" name="toggle">
+        <div class="slider-controls">
+          <label for="btn-1"></label>
+          <label for="btn-2"></label>
+          <label for="btn-3"></label>
         </div>
+        <div class="slides">
+          <div class="slide">
+            <h2 class="slider-item-title">Долго, дорого, <br>
+                скрупулезно.</h2>
+            <p class="slider-item">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
+          </div>
+          <div class="slide">
+            <h2 class="slider-item-title">Любим математику <br>как никто другой</h2>
+            <p class="slider-item">Никакого креатива, только математические формулы <br>для расчета идеальных пропорций.</p>
+            <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
+          </div>
+          <div class="slide">
+            <h2 class="slider-item-title">Только ночь,<br>только хардкор</h2>
+            <p class="slider-item">Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
+            <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--  <
 
         <div class="slider-item slider-item-math">
           <h2 class="slider-item-title">Любим математику <br>как никто другой</h2>
@@ -56,7 +80,8 @@
           <p>Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
           <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
         </div>
-      </div>
+        -->
+
     </div>
   </header>
 
@@ -178,26 +203,28 @@
   </footer>
 
   <!--
-  <div class="popup-write-us">
-    <h2 class="popup-write-us-title">Напишите нам</h2>
-    <a href="#" class="popup-close"></a>
+  <div class="modal-write-us">
+    <button class="modal-write-us-close" type="button" title="Закрыть">Закрыть</button>
+    <h2 class="modal-write-us-title">Напишите нам</h2>
+    <a href="#" class="modal-write-us-close"></a>
     <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
       <label for="write-name">
-            <span>Ваше имя</span>
+            <p class="write">Ваше имя</p>
             <input type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" id="write-name">
           </label>
       <label for="write-mail">
-            <span>Ваш e-mail</span>
+            <p>Ваш e-mail</p>
             <input type="text" name="text" value="" placeholder="Для отправки ответа" id="write-mail">
           </label>
       <label for="write-post">
-            <span>Текст письма</span>
-            <textarea name="post" id="write-post" rows="5" placeholder="Для отправки ответа"></textarea>
+            <p>Текст письма</p>
+            <textarea name="post" id="write-post" rows="5" placeholder="В свободной форме"></textarea>
           </label>
-      <button class="btn" type="submit">Отправить</button>
+      <button class="btn btn-write-us-form" type="submit">Отправить</button>
     </form>
   </div>
--->
+    -->
+
 </body>
 
 </html>
