--- a/index.html
+++ b/index.html
@@ -66,23 +66,6 @@
         </div>
       </div>
     </div>
-
-    <!--  <
-
-        <div class="slider-item slider-item-math">
-          <h2 class="slider-item-title">Любим математику <br>как никто другой</h2>
-          <p>Никакого креатива, только математические формулы <br>для расчета идеальных пропорций.</p>
-          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
-        </div>
-
-        <div class="slider-item slider-item-worktime">
-          <h2 class="slider-item-title">Только ночь,<br>только хардкор</h2>
-          <p>Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
-          <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
-        </div>
-        -->
-
-    </div>
   </header>
 
   <div class="container ">
@@ -156,6 +139,7 @@
             <img src="img/html-logo.png" alt="html-academy" width="260" height="180">
           </a>
         </li>
+
         <li>
           <a title="borodinski" href="#">
             <img src="img/borodinsky-logo-.png" alt="borodinski" width="260" height="180">
@@ -202,28 +186,28 @@
 
   </footer>
 
-  <!--
+
   <div class="modal-write-us">
     <button class="modal-write-us-close" type="button" title="Закрыть">Закрыть</button>
     <h2 class="modal-write-us-title">Напишите нам</h2>
     <a href="#" class="modal-write-us-close"></a>
     <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
       <label for="write-name">
-            <p class="write">Ваше имя</p>
+            <span class="write">Ваше имя</span>
             <input type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" id="write-name">
           </label>
       <label for="write-mail">
-            <p>Ваш e-mail</p>
+            <span>Ваш e-mail</span>
             <input type="text" name="text" value="" placeholder="Для отправки ответа" id="write-mail">
           </label>
       <label for="write-post">
-            <p>Текст письма</p>
+            <span>Текст письма</span>
             <textarea name="post" id="write-post" rows="5" placeholder="В свободной форме"></textarea>
           </label>
       <button class="btn btn-write-us-form" type="submit">Отправить</button>
     </form>
   </div>
-    -->
+
 
 </body>
 
