--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,7 @@
     <div class="filters ">
       <form class="filter-grid-form" action="https://echo.htmlacademy.ru" method="post">
         <div class="filter-price">
-          <b class="filter-title">СТОИМОСТЬ:</b>
+          <b class="filter-form-title">СТОИМОСТЬ:</b>
           <div class="range-filter">
             <div class="range-controls">
               <div class="scale">
@@ -79,7 +79,7 @@
         <p class="filter-form-title">Особенности</p>
         <ul class="filter-list">
           <li>
-            <input type="checkbox" name="slider" value="" id="slider" placeholder="Слайдер">
+            <input type="checkbox" name="slider" value="" id="slider" placeholder="Слайдер" checked="">
             <label for="slider">Слайдер</label>
           </li>
           <li>
@@ -98,112 +98,110 @@
             <input type="checkbox" name="shop" value="" id="shop" placeholder="Корзина">
             <label for="shop">Корзина</label>
           </li>
-          <button class="btn btn-filter" type="submit">Показать</button>
         </ul>
+        <button class="btn btn-filter" type="submit">Показать</button>
       </form>
     </div>
 
     <div class="catalog-content">
-      <div class="sort">
+      <div class="sort clearfix">
+
+        <p class="sort-parametr-title">Сортировать:</p>
 
         <ul class="sort-parametr">
-          <li>Сортировать:
-          </li>
           <li>
-            <a href="#">По цене</a>
+            <a class="sort-marker-up" href="#"></a>
           </li>
-          <li>
-            <a href="#">По типу</a>
+          <li class="sort-active">
+            <a class="sort-marker-down " href="#"></a>
           </li>
           <li>
             <a href="#">По названию</a>
           </li>
-        </ul>
-        <ul>
           <li>
-            <a href="#"></a>
+            <a href="#">По типу</a>
           </li>
-          <li>
-            <a href="#"></a>
+          <li class="sort-active">
+            <a href="#">По цене</a>
           </li>
         </ul>
       </div>
-      <div class="catalog-wrapper clearfix">
-        <div class="catalog-item">
-          <div class="catalog-item-header">
+      <div class="catalog-wrapper clearfix ">
+        <div class="catalog-item ">
+          <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img class="catalog-item-image" src="img/img-sedona.jpg" alt="макет Sedona" width="360" height="576">
-          <div class="catalog-info">
-            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Sedona</a>
-            <p class="catalog-info-description">Информационный сайт
+          <img class="catalog-item-image " src="img/img-sedona.jpg " alt="макет Sedona " width="360 " height="576 ">
+          <div class="catalog-info ">
+            <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Sedona</a>
+            <p class="catalog-info-description ">Информационный сайт
               <br>для туристов</p>
-            <a class="btn btn-catalog-info" href="#">9900 руб</a>
+            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
           </div>
         </div>
-        <div class="catalog-item">
-          <div class="catalog-item-header">
+        <div class="catalog-item ">
+          <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img class="catalog-item-image" src="img/img-pink.jpg" alt="макет Pink app" width="360" height="576">
-          <div class="catalog-info">
-            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Pink app</a>
-            <p class="catalog-info-description">Продуктовый лендинг приложения для iOS и Android</p>
-            <a class="btn btn-catalog-info" href="#">9900 руб</a>
+          <img class="catalog-item-image " src="img/img-pink.jpg " alt="макет Pink app " width="360 " height="576 ">
+          <div class="catalog-info ">
+            <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Pink app</a>
+            <p class="catalog-info-description ">Продуктовый лендинг приложения для iOS и Android</p>
+            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
           </div>
         </div>
-        <div class="catalog-item">
-          <div class="catalog-item-header">
+        <div class="catalog-item ">
+          <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img src="img/img-barbershop.jpg" alt="макет Barbershop" width="360" height="576">
-          <div class="catalog-info">
-            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Barbershop</a>
-            <p class="catalog-info-description">Сайт салоны красоты.
+          <img src="img/img-barbershop.jpg " alt="макет Barbershop " width="360 " height="576 ">
+          <div class="catalog-info ">
+            <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Barbershop</a>
+            <p class="catalog-info-description ">Сайт салоны красоты.
               <br>Для мужчин, да.</p>
-            <a class="btn btn-catalog-info" href="#">9900 руб</a>
+            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
           </div>
         </div>
-        <div class="catalog-item">
-          <div class="catalog-item-header">
+        <div class="catalog-item ">
+          <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img src="img/img-mishka.jpg" alt="макет Mishka" width="360" height="576">
-          <div class="catalog-info">
-            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Mishka</a>
-            <p class="catalog-info-description">Интернет-магазин
+          <img src="img/img-mishka.jpg " alt="макет Mishka " width="360 " height="576 ">
+          <div class="catalog-info ">
+            <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Mishka</a>
+            <p class="catalog-info-description ">Интернет-магазин
               <br>вязаных игрушек</p>
-            <a class="btn btn-catalog-info" href="#">9900 руб</a>
+            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
           </div>
         </div>
-        <div class="catalog-item">
-          <div class="catalog-item-header">
+        <div class="catalog-item ">
+          <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img src="img/img-aplus.jpg" alt="макет A Plus" width="360" height="576">
-          <div class="catalog-info">
-            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">A Plus</a>
-            <p class="catalog-info-description">Лендинг курсов повышения квалификации</p>
-            <a class="btn btn-catalog-info" href="#">9900 руб</a>
+          <img src="img/img-aplus.jpg " alt="макет A Plus " width="360 " height="576 ">
+          <div class="catalog-info ">
+            <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">A Plus</a>
+            <p class="catalog-info-description ">Лендинг курсов повышения квалификации</p>
+            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
           </div>
         </div>
-        <div class="catalog-item">
-          <div class="catalog-item-header">
+        <div class="catalog-item ">
+          <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img src="img/img-kvast.jpg" alt="макет Кваст" width="360" height="576">
-          <div class="catalog-info">
-            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Кваст</a>
-            <p class="catalog-info-description">Промо-сайт производителя крафтового кваса</p>
-            <a class="btn btn-catalog-info" href="#">9900 руб</a>
+          <img src="img/img-kvast.jpg " alt="макет Кваст " width="360 " height="576 ">
+          <div class="catalog-info ">
+            <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Кваст</a>
+            <p class="catalog-info-description ">Промо-сайт производителя крафтового кваса</p>
+            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
           </div>
         </div>
       </div>
       <div class="pagination">
         <ul>
-          <li><a href="#" title="1">1</a></li>
-          <li><a href="#" title="2">2</a></li>
-          <li><a href="#" title="3">3</a></li>
+          <li class="pagination-active"><a href="# " title="1 ">1</a></li>
+          <li><a href="#" title="2 ">2</a></li>
+          <li><a href="#" title="3 ">3</a></li>
           <li><a href="#" title="Следующая">Следующая</a></li>
         </ul>
       </div>
@@ -212,47 +210,47 @@
 
   <footer>
     <div class="map">
-      <div class="container contacts">
-        <section class="map-contacts">
-          <p class="map-contacts-title">NЁRDS DESIGN STUDIO</p>
-          <p class="map-contacts-address">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
-          <p class="map-contacts-phone">тел. +7 (812) 275-75-75</p>
-          <a class="btn btn-write-us" href="#">Напишите нам</a>
+      <div class="container contacts ">
+        <section class="map-contacts ">
+          <p class="map-contacts-title ">NЁRDS DESIGN STUDIO</p>
+          <p class="map-contacts-address ">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
+          <p class="map-contacts-phone ">тел. +7 (812) 275-75-75</p>
+          <a class="btn btn-write-us " href="# ">Напишите нам</a>
         </section>
       </div>
     </div>
-    <div class="container clearfix">
-      <section class="footer-social">
-        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+    <div class="container clearfix ">
+      <section class="footer-social ">
+        <a class="social-btn social-btn-vk " href="# ">Вконтакте</a>
+        <a class="social-btn social-btn-fb " href="# ">Фейсбук</a>
+        <a class="social-btn social-btn-inst " href="# ">Инстаграм</a>
       </section>
-      <section class="footer-info">
-        <p class="footer-info-title">Давайте дружить, это выгодно!</p>
+      <section class="footer-info ">
+        <p class="footer-info-title ">Давайте дружить, это выгодно!</p>
         <p>Скидка 10% для друзей из социальных сетей.</p>
       </section>
     </div>
 
-    <!--  <div class="container clearfix">
-      <div class="map">
-        <div class="map-wrapper">
+    <!--  <div class="container clearfix ">
+      <div class="map ">
+        <div class="map-wrapper ">
 
-          <section class="map-contacts">
-            <p class="map-conacts-title">NЁRDS DESIGN STUDIO</p>
+          <section class="map-contacts ">
+            <p class="map-conacts-title ">NЁRDS DESIGN STUDIO</p>
             <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
             <p>тел. +7 (812) 275-75-75</p>
-            <a class="btn" href="#">Напишите нам</a>
+            <a class="btn " href="# ">Напишите нам</a>
           </section>
 
         </div>
       </div>
-      <section class="footer-social">
-        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+      <section class="footer-social ">
+        <a class="social-btn social-btn-vk " href="# ">Вконтакте</a>
+        <a class="social-btn social-btn-fb " href="# ">Фейсбук</a>
+        <a class="social-btn social-btn-inst " href="# ">Инстаграм</a>
       </section>
-      <section class="footer-info">
-        <p class="footer-info-title">Давайте дружить, это выгодно!</p>
+      <section class="footer-info ">
+        <p class="footer-info-title ">Давайте дружить, это выгодно!</p>
         <p>Скидка 10% для друзей из социальных сетей.</p>
       </section>
     </div>
